# Spokify

./: .gitignore  CMakeLists.txt  HOW_TO_DEVELOP  README  alsa-audio.cpp  analyzerbase.cpp  analyzerbase.h  api_key.h  appkey.h  audio.h  blockanalyzer.cpp  blockanalyzer.h  chunk.h  coverlabel.cpp  coverlabel.h  login.cpp  login.h  lyricswidget.cpp  lyricswidget.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  mimedata.cpp  mimedata.h  playlistmodel.cpp  playlistmodel.h  playlistview.cpp  playlistview.h  playpausebutton.cpp  playpausebutton.h  proxymodel.cpp  proxymodel.h  scrobbler.cpp  scrobbler.h  scrobblingsettingsdialog.cpp  scrobblingsettingsdialog.h  searchhistorymodel.cpp  searchhistorymodel.h  (+15 more)
CMake/Modules/: FindLibLastFm.cmake  Findlibspotify.cmake
